<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">
        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reminder" />

        <LinearLayout
            android:id="@+id/row1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:layout_marginRight="10dp"
                android:text="@string/prod1" />

            <TextView
                android:id="@+id/dos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:layout_marginRight="10dp"
                android:text="@string/prod2" />

            <TextView
                android:id="@+id/tres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:text="@string/prod3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:layout_marginRight="10dp"
                android:text="@string/prod4" />

            <TextView
                android:id="@+id/cinco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:layout_marginRight="10dp"
                android:text="@string/prod5" />

            <TextView
                android:id="@+id/seis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:text="@string/prod6" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/siete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:layout_marginRight="10dp"
                android:text="@string/prod7" />

            <TextView
                android:id="@+id/ocho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:layout_marginRight="10dp"
                android:text="@string/prod8" />

            <TextView
                android:id="@+id/nueve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66cc99"
                android:height="70dp"
                android:width="70dp"
                android:text="@string/prod8" />

        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="Usuario"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Escribe usuario aqui"/>
    <TextView
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo Electronico"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Escribe el Correo de usuario aqui"/>
</LinearLayout>